Avoid layout shift for navbar sticky detection

--- a/components/TheNavbar/styles.module.scss
+++ b/components/TheNavbar/styles.module.scss
@@ -48,7 +48,6 @@
 }
 
 .thenavbar_top {
-  margin-bottom: 8px;
   background: var($--down-fade-gradient);
   height: 40%;
 }
